# nitrocli

nitrocli/: Cargo.toml  README.md
nitrocli/doc/: nitrocli.1
nitrocli/src/: args.rs  commands.rs
nitrokey/: Cargo.toml
nitrokey-test/: Cargo.toml
nitrokey-test/src/: lib.rs
nitrokey/src/tests/: mod.rs
nitrokey/tests/: device.rs  util.rs
